[package]
name = "disk-0-madness"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
fastrand = "1.8.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
debug = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
