[package]
name = "cart"     # Should be cart or w4 watch won't work (https://github.com/aduros/wasm4/issues/521)
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
fastrand = "1.8.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
debug = false

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
